--- a/part-4/blog-list/package.json
+++ b/part-4/blog-list/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,12 @@
   },
   "devDependencies": {
     "eslint": "^8.21.0",
-    "nodemon": "^2.0.19"
+    "jest": "^28.1.3",
+    "lodash": "^4.17.21",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
