--- a/part-7/bloglist-extended/backend/package.json
+++ b/part-7/bloglist-extended/backend/package.json
@@ -26,6 +26,7 @@
     "jest": "^28.1.3",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.19",
+    "prettier": "2.7.1",
     "supertest": "^6.2.4"
   },
   "jest": {
